# DriveWorld-lite_V2

./: .gitignore  DATASET_TRAINVAL_PARTIAL.md  LOCAL_ACCEPTANCE.md  PLAN_TODO.md  README.md  TRAINING.md  V2_IMPLEMENTATION.md  evaluate.py  inference.py  pyproject.toml  requirements.txt  roadmap.md  train.py
driveworld/: __init__.py  config.py  utils.py
scripts/: audit_mdd_stage3_checkpoint.py  audit_pretrained_stdit.py  build_front_clips.py  cache_latents_multi_gpu.sh  cache_partial_trainval.sh  cache_static_maps.py  cache_vae_latents.py  diagnose_timesteps.py  enrich_manifest_camera_parameters.py  enrich_manifest_map_metadata.py  evaluate_diffusion_loss.py  generate_counterfactual_demo.py  generate_mdd_counterfactual_demo.py  inference_counterfactual.py  inference_mdd.py  inspect_latents.py  launch_local_16gb.sh  launch_mdd_2x5090_12hz_temporal.sh  launch_mdd_4x5090.sh  launch_multi_4090.sh  prepare_mdd_full_trainval.sh  prepare_partial_trainval.sh  reconstruct_vae.py  render_clip.py  smoke_mdd_adapter_backward.py  smoke_models.py  smoke_nccl.py  smoke_v2.py  smoke_vae.py  stress_online_vae.py  test_mdd_conditioned_forward.py  test_mdd_end_to_end.py  test_mdd_singleview_load.py  train_mdd_adapter_smoke.sh  train_online_vae_8x16.sh  validate_dataset.py  validate_mdd_4x5090.sh
tests/: test_can_interpolator.py  test_control_metrics.py  test_dataset_contract.py  test_geometry.py  test_horizon_metrics.py  test_mdd_adapter_checkpoint.py  test_mdd_checkpoint_audit.py  test_mdd_checkpoint_loader.py  test_mdd_condition_adapter.py  test_mdd_condition_loader.py  test_models.py  (+12 more)
(+91 files in other folders)
