[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driveworld-lite"
version = "0.1.0"
description = "Single-camera ego-conditioned video prediction for nuScenes"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<2.0",
  "Pillow>=9.5",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
train = [
  "torch>=2.2",
  "torchvision>=0.17",
  "diffusers>=0.30",
  "accelerate>=0.30",
  "safetensors>=0.4",
  "tensorboard>=2.15",
]
eval = ["scikit-image>=0.22", "lpips>=0.1.4", "opencv-python>=4.8"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.setuptools.packages.find]
include = ["driveworld*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

